--- a/template.yaml
+++ b/template.yaml
@@ -15,13 +15,10 @@ spec:
         violation[{"msg": msg}] {
           provided := {c | c := input.review.object.spec.template.spec.containers[_]; not startswith(c.name, "init-")}
 
-          hasMemoryLimits := count(c | c := provided[_]; c.resources.limits.memory) > 0
-          hasMemoryRequests := count(c | c := provided[_]; c.resources.requests.memory) > 0
-          hasCPURequests := count(c | c := provided[_]; c.resources.requests.cpu) > 0
+          mainContainers := {c | c := provided[_]; not (c.resources.limits.memory or c.resources.requests.memory or c.resources.requests.cpu)}
 
-          not hasMemoryLimits
-          not hasMemoryRequests
-          not hasCPURequests
+          count(mainContainers) > 0
 
-          msg := sprintf("Main Containers %v must have CPU and Memory requests and Memory limits specified.", [provided])
+          msg := sprintf("Main Containers %v should have CPU and Memory requests and Memory limits specified, but they are not.", [mainContainers])
         }
+
