--- a/template.yaml
+++ b/template.yaml
@@ -1,34 +1,98 @@
 apiVersion: templates.gatekeeper.sh/v1beta1
 kind: ConstraintTemplate
 metadata:
-  name: k8srequiredlimitsrequests
-  annotations:
-    description: Enforce cpu memory limits
+  name: k8sazurev3containerlimitsrequests
 spec:
   crd:
     spec:
       names:
-        kind: k8srequiredlimitsrequests
+        kind: K8sAzureV3ContainerLimitsRequests
+      validation:
+        # Schema for the `parameters` field
+        openAPIV3Schema:
+          properties:
+            cpuLimit:
+              type: string
+            memoryLimit:
+              type: string
+            excludedContainers:
+              type: array
+              items:
+                type: string
+            excludedImages:
+              description: >-
+                Any container that uses an image that matches an entry in this list will be excluded
+                from enforcement. Prefix-matching can be signified with `*`. For example: `my-image-*`.
+                It is recommended that users use the fully-qualified Docker image name (e.g. start with a domain name)
+                in order to avoid unexpectedly excluding images from an untrusted repository.
+              type: array
+              items:
+                type: string
   targets:
     - target: admission.k8s.gatekeeper.sh
       rego: |
-        package k8srequiredlimitsrequests
+        package k8sazurev3containerlimits
 
+        import data.lib.exclude_container_image.is_excluded
+
+        missing(obj, field) = true {
+          not obj[field]
+        }
+
+        missing(obj, field) = true {
+          obj[field] == ""
+        }
 
         violation[{"msg": msg}] {
           general_violation[{"msg": msg, "field": "containers"}]
         }
 
+        violation[{"msg": msg}] {
+          general_violation[{"msg": msg, "field": "initContainers"}]
+        }
+
         general_violation[{"msg": msg, "field": field}] {
-          input.review.object.kind == "Deployment"
           container := input.review.object.spec[field][_]
+          not input_container_excluded(container.name)
+          not is_excluded(container)
+          not container.resources
+          msg := sprintf("container <%v> has no resource limits", [container.name])
+        }
+
+        general_violation[{"msg": msg, "field": field}] {
+          container := input.review.object.spec[field][_]
+          not input_container_excluded(container.name)
+          not is_excluded(container)
           not container.resources.limits
           msg := sprintf("container <%v> has no resource limits", [container.name])
         }
 
         general_violation[{"msg": msg, "field": field}] {
-          input.review.object.kind == "Deployment"
           container := input.review.object.spec[field][_]
+          not input_container_excluded(container.name)
+          not is_excluded(container)
           missing(container.resources.limits, "memory")
           msg := sprintf("container <%v> has no memory limit", [container.name])
         }
+
+        input_container_excluded(field) {
+            field == input.parameters.excludedContainers[_]
+        }
+      libs:
+        - |
+          package lib.exclude_container_image
+          is_excluded(container) {
+              exclude_images := object.get(object.get(input, "parameters", {}), "excludedImages", [])
+              img := container.image
+              exclusion := exclude_images[_]
+              _matches_exclusion(img, exclusion)
+          }
+          _matches_exclusion(img, exclusion) {
+              not endswith(exclusion, "*")
+              exclusion == img
+          }
+          _matches_exclusion(img, exclusion) {
+              endswith(exclusion, "*")
+              prefix := trim_suffix(exclusion, "*")
+              startswith(img, prefix)
+          }
