--- a/template.yaml
+++ b/template.yaml
@@ -26,19 +26,19 @@ spec:
           container := input.review.object.spec[field][_]
           not is_excluded(container)
 
-          request_memory_missing := missing(container.resources.requests, "memory") {
+          request_memory_missing := missing(container.resources.requests, "memory")
             field == "memory"
-          }
-          request_cpu_missing := missing(container.resources.requests, "cpu") {
+
+          request_cpu_missing := missing(container.resources.requests, "cpu")
             field == "cpu"
-          }
 
-          limit_memory_missing := missing(container.resources.limits, "memory") {
+
+          limit_memory_missing := missing(container.resources.limits, "memory")
             field == "memory"
-          }
 
-          msg := sprintf("TEST container <%v> has no memory request", [container.name]) { request_memory_missing }
-          msg := sprintf("TEST container <%v> has no CPU request", [container.name]) { request_cpu_missing }
-          msg := sprintf("TEST container <%v> has no memory limit", [container.name]) { limit_memory_missing }
+
+        msg := sprintf("TEST container <%v> has no memory request", [container.name]) { request_memory_missing }
+        msg += sprintf(" TEST container <%v> has no CPU request", [container.name]) { request_cpu_missing }
+        msg += sprintf(" TEST container <%v> has no memory limit", [container.name]) { limit_memory_missing }
         }
 
