--- a/template.yaml
+++ b/template.yaml
@@ -41,7 +41,7 @@ spec:
 
 
         general_violation[{"msg": msg, "field": field}] {
-          container := input.review.object.spec[field][_]
+          container := input.review.object.spec.template.spec[field][_]
           not input_container_excluded(container.name)
           not is_excluded(container)
           missing(container.resources.requests, "cpu")
@@ -49,7 +49,7 @@ spec:
         }
 
         general_violation[{"msg": msg, "field": field}] {
-          container := input.review.object.spec[field][_]
+          container := input.review.object.spec.template.spec[field][_]
           not input_container_excluded(container.name)
           not is_excluded(container)
           missing(container.resources.requests, "memory")
@@ -57,7 +57,7 @@ spec:
         }
 
         general_violation[{"msg": msg, "field": field}] {
-          container := input.review.object.spec[field][_]
+          container := input.review.object.spec.template.spec[field][_]
           not input_container_excluded(container.name)
           not is_excluded(container)
           missing(container.resources.limits, "memory")
